--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentreplydata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentreplydata.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.CommentReplyData
-    summary: 描述通过调用 "commentReply ()" 返回的数据的接口。
+  - uid: 'excel!Excel.Interfaces.CommentReplyData:interface'
+    summary: 描述通过调用 "commentReply （）" 返回的数据的接口。
     name: Excel.Interfaces.CommentReplyData
     fullName: Excel.Interfaces.CommentReplyData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.CommentReplyData.authorEmail
-      - excel.Excel.Interfaces.CommentReplyData.authorName
-      - excel.Excel.Interfaces.CommentReplyData.content
-      - excel.Excel.Interfaces.CommentReplyData.creationDate
-      - excel.Excel.Interfaces.CommentReplyData.id
-      - excel.Excel.Interfaces.CommentReplyData.resolved
-  - uid: excel.Excel.Interfaces.CommentReplyData.authorEmail
+      - 'excel!Excel.Interfaces.CommentReplyData#authorEmail:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#authorName:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#content:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#creationDate:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#id:member'
+      - 'excel!Excel.Interfaces.CommentReplyData#resolved:member'
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#authorEmail:member'
     summary: |-
       获取批注回复作者的电子邮件。
 
-      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: authorEmail
     fullName: authorEmail
@@ -31,11 +31,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.CommentReplyData.authorName
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#authorName:member'
     summary: |-
       获取批注回复作者的姓名。
 
-      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: authorName
     fullName: authorName
@@ -47,11 +47,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.CommentReplyData.content
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#content:member'
     summary: |-
       获取或设置批注回复的内容。 字符串为纯文本。
 
-      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: content
     fullName: content
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.CommentReplyData.creationDate
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#creationDate:member'
     summary: |-
       获取批注回复的创建时间。
 
-      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: creationDate
     fullName: creationDate
@@ -78,12 +78,12 @@ items:
       content: 'creationDate?: Date;'
       return:
         type:
-          - Date
-  - uid: excel.Excel.Interfaces.CommentReplyData.id
+          - '!Date:interface'
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#id:member'
     summary: |-
       表示批注回复标识符。 只读。
 
-      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: id
     fullName: id
@@ -95,11 +95,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.CommentReplyData.resolved
+  - uid: 'excel!Excel.Interfaces.CommentReplyData#resolved:member'
     summary: |-
       获取或设置批注答复状态。 值为 "true" 表示批注答复处于 "已解决" 状态。
 
-      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: resolved
     fullName: resolved
@@ -111,3 +111,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: '!Date:interface'
+    name: Date
