--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentupdatedata.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.CommentUpdateData
-    summary: '一个用于更新 Comment 对象上的数据的接口, 可用于 "comment. set (<!-- -->{ ... }<!-- -->)".'
+  - uid: 'excel!Excel.Interfaces.CommentUpdateData:interface'
+    summary: '一个用于更新 Comment 对象上的数据的接口，可用于 "comment. set （<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.CommentUpdateData
     fullName: Excel.Interfaces.CommentUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.CommentUpdateData.content
-      - excel.Excel.Interfaces.CommentUpdateData.resolved
-  - uid: excel.Excel.Interfaces.CommentUpdateData.content
+      - 'excel!Excel.Interfaces.CommentUpdateData#content:member'
+      - 'excel!Excel.Interfaces.CommentUpdateData#resolved:member'
+  - uid: 'excel!Excel.Interfaces.CommentUpdateData#content:member'
     summary: |-
       获取或设置批注的内容。 字符串为纯文本。
 
-      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: content
     fullName: content
@@ -27,11 +27,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.CommentUpdateData.resolved
+  - uid: 'excel!Excel.Interfaces.CommentUpdateData#resolved:member'
     summary: |-
       获取或设置批注线程的状态。 值为 "true" 表示注释线程处于 "已解决" 状态。
 
-      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: resolved
     fullName: resolved
