--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.styleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.styleloadoptions.yml
@@ -1,40 +1,40 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.StyleLoadOptions
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions:interface'
     summary: |-
       一个封装样式的格式和其他属性的对象。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.StyleLoadOptions
     fullName: Excel.Interfaces.StyleLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.StyleLoadOptions.$all
-      - excel.Excel.Interfaces.StyleLoadOptions.borders
-      - excel.Excel.Interfaces.StyleLoadOptions.builtIn
-      - excel.Excel.Interfaces.StyleLoadOptions.fill
-      - excel.Excel.Interfaces.StyleLoadOptions.font
-      - excel.Excel.Interfaces.StyleLoadOptions.formulaHidden
-      - excel.Excel.Interfaces.StyleLoadOptions.horizontalAlignment
-      - excel.Excel.Interfaces.StyleLoadOptions.includeAlignment
-      - excel.Excel.Interfaces.StyleLoadOptions.includeBorder
-      - excel.Excel.Interfaces.StyleLoadOptions.includeFont
-      - excel.Excel.Interfaces.StyleLoadOptions.includeNumber
-      - excel.Excel.Interfaces.StyleLoadOptions.includePatterns
-      - excel.Excel.Interfaces.StyleLoadOptions.includeProtection
-      - excel.Excel.Interfaces.StyleLoadOptions.indentLevel
-      - excel.Excel.Interfaces.StyleLoadOptions.locked
-      - excel.Excel.Interfaces.StyleLoadOptions.name
-      - excel.Excel.Interfaces.StyleLoadOptions.numberFormat
-      - excel.Excel.Interfaces.StyleLoadOptions.numberFormatLocal
-      - excel.Excel.Interfaces.StyleLoadOptions.readingOrder
-      - excel.Excel.Interfaces.StyleLoadOptions.shrinkToFit
-      - excel.Excel.Interfaces.StyleLoadOptions.verticalAlignment
-      - excel.Excel.Interfaces.StyleLoadOptions.wrapText
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.$all
+      - 'excel!Excel.Interfaces.StyleLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#borders:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#builtIn:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#fill:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#font:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#formulaHidden:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#horizontalAlignment:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#includeAlignment:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#includeBorder:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#includeFont:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#includeNumber:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#includePatterns:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#includeProtection:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#indentLevel:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#locked:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#name:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#numberFormat:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#numberFormatLocal:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#readingOrder:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#shrinkToFit:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#verticalAlignment:member'
+      - 'excel!Excel.Interfaces.StyleLoadOptions#wrapText:member'
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -45,11 +45,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.borders
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#borders:member'
     summary: |-
       四个 Border 对象的 Border 集合，表示四个边框的样式。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -59,12 +59,12 @@ items:
       content: 'borders?: Excel.Interfaces.RangeBorderCollectionLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.RangeBorderCollectionLoadOptions
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.builtIn
+          - 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#builtIn:member'
     summary: |-
       指示样式是否为内置样式。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: builtIn
     fullName: builtIn
     langs:
@@ -75,11 +75,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.fill
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#fill:member'
     summary: |-
       样式的填充。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -89,12 +89,12 @@ items:
       content: 'fill?: Excel.Interfaces.RangeFillLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.RangeFillLoadOptions
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.font
+          - 'excel!Excel.Interfaces.RangeFillLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#font:member'
     summary: |-
       该 Font 对象表示样式的字体。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -104,12 +104,12 @@ items:
       content: 'font?: Excel.Interfaces.RangeFontLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.RangeFontLoadOptions
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.formulaHidden
+          - 'excel!Excel.Interfaces.RangeFontLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#formulaHidden:member'
     summary: |-
       指示工作表受保护时是否隐藏公式。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
     fullName: formulaHidden
     langs:
@@ -120,11 +120,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.horizontalAlignment
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#horizontalAlignment:member'
     summary: |-
-      表示样式水平对齐。 有关详细信息, 请参阅 HorizontalAlignment。
+      表示样式水平对齐。 有关详细信息，请参阅 HorizontalAlignment。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -135,11 +135,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.includeAlignment
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#includeAlignment:member'
     summary: |-
       指示样式是否包含 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeAlignment
     fullName: includeAlignment
     langs:
@@ -150,11 +150,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.includeBorder
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#includeBorder:member'
     summary: |-
       指示样式是否包含 Color、ColorIndex、LineStyle 和 Weight 边框属性。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeBorder
     fullName: includeBorder
     langs:
@@ -165,11 +165,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.includeFont
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#includeFont:member'
     summary: |-
       指示样式是否包含 Background、Bold、Color、ColorIndex、FontStyle、Italic、Name、Size、Strikethrough、Subscrip、Superscript 和 Underline 字体属性。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeFont
     fullName: includeFont
     langs:
@@ -180,11 +180,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.includeNumber
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#includeNumber:member'
     summary: |-
       指示样式是否包含 NumberFormat 属性。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeNumber
     fullName: includeNumber
     langs:
@@ -195,11 +195,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.includePatterns
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#includePatterns:member'
     summary: |-
       指示样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includePatterns
     fullName: includePatterns
     langs:
@@ -210,11 +210,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.includeProtection
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#includeProtection:member'
     summary: |-
       指示样式是否包含 FormulaHidden 和 Locked 保护属性。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeProtection
     fullName: includeProtection
     langs:
@@ -225,11 +225,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.indentLevel
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#indentLevel:member'
     summary: |-
       0 到 250 之间的一个整数，指示样式的缩进水平。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: indentLevel
     fullName: indentLevel
     langs:
@@ -240,11 +240,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.locked
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#locked:member'
     summary: |-
       指示工作表受保护时是否锁定对象。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
     fullName: locked
     langs:
@@ -255,11 +255,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.name
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#name:member'
     summary: |-
       样式的名称。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -270,11 +270,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.numberFormat
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#numberFormat:member'
     summary: |-
       样式中数字格式的格式代码。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -285,11 +285,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.numberFormatLocal
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#numberFormatLocal:member'
     summary: |-
       样式中数字格式的本地化格式代码。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormatLocal
     fullName: numberFormatLocal
     langs:
@@ -300,11 +300,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.readingOrder
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#readingOrder:member'
     summary: |-
       样式中的阅读顺序。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -315,11 +315,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.shrinkToFit
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#shrinkToFit:member'
     summary: |-
       指示文本是否自动缩小以适合可用列宽。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
     fullName: shrinkToFit
     langs:
@@ -330,11 +330,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.verticalAlignment
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#verticalAlignment:member'
     summary: |-
-      表示样式的垂直对齐方式。 有关详细信息, 请参阅 VerticalAlignment。
+      表示样式的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -345,11 +345,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.StyleLoadOptions.wrapText
+  - uid: 'excel!Excel.Interfaces.StyleLoadOptions#wrapText:member'
     summary: |-
       指示 Microsoft Excel 是否将对象中的文本换行。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
@@ -360,3 +360,10 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions:interface'
+    name: Excel.Interfaces.RangeBorderCollectionLoadOptions
+  - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions:interface'
+    name: Excel.Interfaces.RangeFillLoadOptions
+  - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions:interface'
+    name: Excel.Interfaces.RangeFontLoadOptions
